formatted noOfVideos and noOfImages icons removed ugly jump at social share icons in obv show removed empty desc in species search results view fixed error in SUserService

--- a/web-app/css/wgp.css
+++ b/web-app/css/wgp.css
@@ -665,6 +665,7 @@ ul#recoSummary {
 	bottom: 5px;
 	font-size: 0.8em;
 	color: #b1b1b1;
+        background-color:whitesmoke;
 	/* opacity:0.5;        */
 }
 
